--- a/src/app/components/calculator/calculator.component.css
+++ b/src/app/components/calculator/calculator.component.css
@@ -34,3 +34,15 @@ input{
     justify-content: center   ;
     
 }
+
+#banner{
+    background-color: blueviolet;
+    text-align: center;
+    align-items: center;
+}
+
+#texto{
+    text-align: center;
+    align-items: center;
+
+}
